[package]
name = "triple_triad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
hyper = { version = "0.14.27", features = ["full"] }
itertools = "0.11.0"
mcts = "0.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }

